@@ -1,3 +1,9 @@
+2008-08-21  David Smith  <dsmith@redhat.com>
+
+	* tapsets.cxx (itrace_derived_probe_group::emit_module_decls):
+	Updated task finder callback function signature.
+	(utrace_derived_probe_group::emit_module_decls): Ditto.
+
 2008-08-20  David Smith  <dsmith@redhat.com>
 
 	* tapsets.cxx (utrace_derived_probe_group::emit_probe_decl):
